Fixes progress on mobile screens.

--- a/style.css
+++ b/style.css
@@ -190,6 +190,14 @@ footer {
 /* generated by https://loading.io/ */
 
 @media only screen and (max-width: 768px) {
+	.progress {
+		top: 0.5rem;
+		right: 0.5rem;
+		padding: 0.5rem;
+	}
+	.progress h1 {
+		font-size: 1rem;
+	}
 	main article .table > div {
 		grid-template-columns: unset;
 		gap: 2rem;
